@@ -4,20 +4,12 @@ services: memcached
 matrix:
   include:
   - python: "3.6"
-    env: TOX_ENV=py36-django20
-  - python: "3.6"
-    env: TOX_ENV=py36-django21
-  - python: "3.6"
     env: TOX_ENV=py36-django22
-  - python: "3.7"
-    env: TOX_ENV=py37-django20
-  - python: "3.7"
-    env: TOX_ENV=py37-django21
   - python: "3.7"
     env: TOX_ENV=py37-django22
   - python: "3.7"
     env: TOX_ENV=py37-django30
-  - python: "3.7"
+  - python: "3.8"
     env: TOX_ENV=py37-django31
 
 
