@@ -4,7 +4,7 @@ Rosetta
 
 .. image:: https://travis-ci.org/mbi/django-rosetta.svg?branch=develop
   :target: http://travis-ci.org/mbi/django-rosetta
-  
+
 .. image:: https://img.shields.io/pypi/v/django-rosetta
   :target: https://pypi.org/project/django-rosetta/
 
@@ -16,13 +16,12 @@ Rosetta is a `Django <http://www.djangoproject.com/>`_ application that facilita
 
 Because it doesn't export any models, Rosetta doesn't create any tables in your project's database. Rosetta can be installed and uninstalled by simply adding and removing a single entry in your project's `INSTALLED_APPS` and a single line in your main ``urls.py`` file.
 
-Note: as of version 0.7.13 django-rosetta requires Django 1.8 or later. As of version 0.9.0, django-rosetta requires Django 1.11 or later.
+Note: as of version 0.9.0, django-rosetta requires Django 1.11 or later, as of version 0.9.6, django-rosetta requires Django 2.2 or later
 
 ********
 Features
 ********
 
-* Database independent
 * Reads and writes your project's `gettext` catalogs (po and mo files)
 * Installed and uninstalled in under a minute
 * Uses Django's admin interface CSS
