@@ -1,7 +1,6 @@
 [tox]
 envlist =
         flake8,
-        py{36,37}-django{20,21},
         py{36,37,38}-django{22,30,31},
         gettext,
         docs
@@ -18,8 +17,6 @@ setenv =
         PYTHONDONTWRITEBYTECODE=1
 
 deps =
-        django20: Django==2.0.*
-        django21: Django>=2.1,<=2.1.99
         django22: Django>=2.2.8,<=2.2.99
         django30: Django>=3.0,<=3.0.99
         django31: Django>=3.1,<=3.1.99
@@ -46,6 +43,7 @@ commands =
       msgfmt -c -o fr/LC_MESSAGES/django.mo fr/LC_MESSAGES/django.po
       msgfmt -c -o hu/LC_MESSAGES/django.mo hu/LC_MESSAGES/django.po
       msgfmt -c -o it/LC_MESSAGES/django.mo it/LC_MESSAGES/django.po
+      msgfmt -c -o ky/LC_MESSAGES/django.mo ky/LC_MESSAGES/django.po
       msgfmt -c -o nl/LC_MESSAGES/django.mo nl/LC_MESSAGES/django.po
       msgfmt -c -o pl/LC_MESSAGES/django.mo pl/LC_MESSAGES/django.po
       msgfmt -c -o ru/LC_MESSAGES/django.mo ru/LC_MESSAGES/django.po
